[package]
name = "wasm_webtransport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [ "WebTransport", "WebTransportOptions", "WebTransportHash", "console" ]}
xwt-core = { version = "0.5.0", default-features = false }
xwt-web-sys = { version = "0.13.0" }
console_error_panic_hook = "0.1.7"

[features]
default = []
web_sys_unstable_apis = []
